# peacock

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  host-docs.bash
benches/: basic.rs
cargo-crest/: Cargo.toml
cargo-crest/src/: main.rs
docs/: application_context.md
docs/message/: overview.md
docs/widget/: overview.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/basic/static/css/: index.css
examples/basic/static/xml/: index.xml
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs
examples/calculator/static/xml/: history.xml  index.xml  memory.xml  navigation.xml
examples/dynamic-behaviour/: Cargo.toml
examples/dynamic-behaviour/src/: main.rs
examples/dynamic-behaviour/static/xml/: index.xml
examples/dynamic-structure/: Cargo.toml  build.rs
examples/dynamic-structure/src/: main.rs
examples/dynamic-structure/static/xml/: index.xml
examples/renderer/: Cargo.toml  build.rs
examples/renderer/src/: main.rs
examples/renderer/static/xml/: index.xml
examples/widget-sandbox/: Cargo.toml
src/: lib.rs  widgets-styling.md
src/api/: app_context.rs  button.rs  column.rs  container.rs  mod.rs  row.rs  slider.rs  template.rs  text.rs  timer.rs
src/api/widgets/: button.rs  column.rs  container.rs  mod.rs  row.rs  slider.rs  text.rs
src/message/: mod.rs
src/widget/: button.rs  canvas.rs  checkbox.rs  column.rs  combobox.rs  container.rs  horizontalrule.rs  image.rs  mod.rs  row.rs  text.rs
static/: index.html
static/css/: index.css
static/xml/: index.xml  template.xml
