[package]
    name = "peacock"
    version = "0.1.0"
    authors = ["Maxine Alexander <Max.Alexander3721@gmail.com>"]
    edition = "2021"

[features]
    build = ["dep:glob", "dep:peacock-pinion", "dep:peacock-crest"]
    wgpu = ["iced/wgpu", "dep:iced_renderer", "dep:iced_wgpu", "dep:iced_tiny_skia"]
    perf = []

[dependencies]
    glob = { version = "0.3.1", optional = true }
    peacock-pinion = { workspace = true, optional = true }
    peacock-crest = { workspace = true, optional = true }
    iced.workspace = true
    iced_renderer = { version = "0.13.0", optional = true }
    iced_wgpu = { version = "0.13.5", optional = true }
    iced_tiny_skia = { version = "0.13.0", optional = true }

[workspace]
    members = [
        "pinion",
        "crest",
        "ocelli",
        "examples/*"
        ]
        [workspace.dependencies.peacock]
            default-features = true
            version = "0.1.0"
            path = "."

        [workspace.dependencies.peacock-pinion]
            version = "0.1.0"
            path = "pinion"

        [workspace.dependencies.peacock-crest]
            version = "0.1.0"
            path = "crest"

        [workspace.dependencies.peacock-ocelli]
            version = "0.1.0"
            path = "ocelli"

        [workspace.dependencies.iced]
            version = "0.13.1"
            features = ["advanced", "markdown", "webgl", "canvas"]
