[package]
    name = "peacock"
    version = "0.1.0"
    authors = ["Maxine Alexander <Max.Alexander3721@gmail.com>"]
    edition = "2021"

[features]
    build = []
    wgpu = ["iced/wgpu", "dep:iced_renderer", "dep:iced_wgpu", "dep:iced_tiny_skia"]
    perf = []

[dependencies]
    glob = { version = "0.3.1" }
    peacock-pinion = { workspace = true }
    peacock-crest = { workspace = true }
    iced.workspace = true
    iced_renderer = { version = "0.13.0", optional = true }
    iced_wgpu = { version = "0.13.5", optional = true }
    iced_tiny_skia = { version = "0.13.0", optional = true }
selectors = "0.26.0"
cssparser = "0.34.0"
derive_more = { version = "1.0.0", features = ["deref", "from", "from_str"] }
minijinja = "2.5.0"

[workspace]
    members = [
        "pinion",
        "crest",
        # "ocelli",
        "examples/*",
        "cargo-crest",
        # "signal",
    ]
        [workspace.dependencies.peacock]
            default-features = true
            version = "0.1.0"
            path = "."

        [workspace.dependencies.peacock-pinion]
            version = "0.1.0"
            path = "pinion"

        [workspace.dependencies.peacock-crest]
            version = "0.1.0"
            path = "crest"

        # [workspace.dependencies.peacock-ocelli]
        #     version = "0.1.0"
        #     path = "ocelli"

        # [workspace.dependencies.peacock-signal]
        #     version = "0.1.0"
        #     path = "signal"

        [workspace.dependencies.iced]
            version = "0.13.1"
            features = ["advanced", "markdown", "webgl", "canvas"]
