[package]
    name = "peacock"
    description = "A cross-platform GUI framework that focuses on accessibility, modularity, and maintainability"
    authors = ["Maxine Alexander <Max.Alexander3721@gmail.com>"]
    version.workspace = true
    edition.workspace = true
    readme.workspace = true
    repository.workspace = true
    license.workspace = true
    keywords.workspace = true
    categories.workspace = true

[features]
    build = []
    wgpu = ["iced/wgpu", "dep:iced_renderer", "dep:iced_wgpu", "dep:iced_tiny_skia"]
    canvas = ["iced/canvas"]
    perf = []

[dev-dependencies]
    criterion = "0.5.1"

[dependencies]
    glob = { version = "0.3.1" }
    peacock-pinion = { workspace = true }
    peacock-crest = { workspace = true }
    iced = { workspace = true, features = ["image"]}
    iced_renderer = { version = "0.13.0", optional = true }
    iced_wgpu = { version = "0.13.5", optional = true }
    iced_tiny_skia = { version = "0.13.0", optional = true }
    selectors = "0.26.0"
    cssparser = "0.34.0"
    derive_more = { version = "1.0.0", features = ["deref", "from", "from_str"] }
    minijinja = "2.5.0"
    uuid = { version = "1.12.0", features = ["v4"] }

[[bench]]
    name = "basic"
    harness = false

[workspace]
    members = [
        "pinion",
        "crest",
        # "ocelli",
        "cargo-crest",
        "examples/*",
        "crest/examples/*",
        # "pinion/examples/*",
        # "signal",
    ]
        [workspace.package]
            version = "0.1.0"
            edition = "2021"
            readme = "README.md"
            repository = "https://github.com/nucleus-labs/peacock"
            license = "MIT"
            keywords = ["css", "xml", "templating", "framework", "cross-platform"]
            categories = ["gui", "parsing", "template-engine", "web-programming"]

        [workspace.dependencies.peacock]
            default-features = true
            version = "0.1.0"
            path = "."

        [workspace.dependencies.peacock-pinion]
            version = "0.1.0"
            path = "pinion"

        [workspace.dependencies.peacock-crest]
            version = "0.1.0"
            path = "crest"

        # [workspace.dependencies.peacock-ocelli]
        #     version = "0.1.0"
        #     path = "ocelli"

        # [workspace.dependencies.peacock-signal]
        #     version = "0.1.0"
        #     path = "signal"

        [workspace.dependencies.iced]
            version = "0.13.1"
            features = ["advanced", "markdown", "webgl", "canvas"]
