[package]
name = "basic"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
peacock.workspace = true
peacock.features = ["build"]

[dependencies]
peacock.workspace = true
iced.workspace = true
glob = "0.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced_web = "0.4.0"
