[package]
name = "renderer"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
peacock.workspace = true
peacock.features = ["build"]
peacock-pinion.workspace = true
# peacock-ocelli.workspace = true

[dependencies]
peacock = { workspace = true, features = ["wgpu"]}
iced.workspace = true
glam = "0.29.1"
obj-rs = "0.7.4"
